objects/pse__RSS_Custom_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for the resource search service.</description>
    <fields>
        <fullName>pse__Group_Weighting__c</fullName>
        <defaultValue>&apos;Essential&apos;</defaultValue>
        <description>Determines how important it is that the resource matches the Group filter value. Essential means the Group filter value must match the resource’s group. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
        <inlineHelpText>Determines how important it is that the resource matches the Group filter value. Essential means the Group filter value must match the resource’s group. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
        <label>Group Weighting</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Practice_Weighting__c</fullName>
        <defaultValue>&apos;Essential&apos;</defaultValue>
        <description>Determines how important it is that the resource matches the Practice value. Essential means the Practice filter value must match the resource’s practice. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
        <inlineHelpText>Determines how important it is that the resource matches the Practice value. Essential means the Practice filter value must match the resource’s practice. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
        <label>Practice Weighting</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Region_Weighting__c</fullName>
        <defaultValue>&apos;Essential&apos;</defaultValue>
        <description>Determines how important it is that the resource matches the Region filter value. Essential means the Region filter value must match the resource’s region. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
        <inlineHelpText>Determines how important it is that the resource matches the Region filter value. Essential means the Region filter value must match the resource’s region. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
        <label>Region Weighting</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Role_Weighting__c</fullName>
        <defaultValue>&apos;Essential&apos;</defaultValue>
        <description>Determines how important it is that the resource matches the Role filter value. Essential means the Role filter value must match the resource’s role. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</description>
        <inlineHelpText>Determines how important it is that the resource matches the Role filter value. Essential means the Role filter value must match the resource’s role. Other possible values from most important to least important are Ideal, Desirable, and Suggested.</inlineHelpText>
        <label>Role Weighting</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Resource Search Service</label>
</CustomObject>